[package]
name = "openai-client"
version = "0.2.0"
edition = "2024"

[dependencies]
a2httpc = { version = "0.30.0", default-features = false, features = ["charsets", "json", "single-threaded", "tls-rustls-webpki-roots"] }
either = "1.15.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
registry = "ghcr.io/promptrs"
package = "promptrs:core"
version = "0.2.0"
world = "client"

[package.metadata.component.dependencies]
